logs/office365-rest-python-client.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Office365_REST_Python_Client-2.0.0.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/examples'...
Compiling './lib/python3.5/site-packages/examples/data_generator.py'...
***   File "./lib/python3.5/site-packages/examples/data_generator.py", line 15
    print "Task '{0}' has been created".format(task_item.properties["Title"])
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/file_operations.py'...
***   File "./lib/python3.5/site-packages/examples/file_operations.py", line 12
    print "List url: {0}".format(folder.properties["ServerRelativeUrl"])
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/listitem_operations.py'...
***   File "./lib/python3.5/site-packages/examples/listitem_operations.py", line 9
    print "Read list items example..."
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/listitems_operations_alt.py'...
***   File "./lib/python3.5/site-packages/examples/listitems_operations_alt.py", line 11
    print "Retrieving list items from List {0}".format(list_title)
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/user_group_operations.py'...
***   File "./lib/python3.5/site-packages/examples/user_group_operations.py", line 13
    print "Group title: {0}".format(group.properties["Title"])
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/view_operations.py'...
***   File "./lib/python3.5/site-packages/examples/view_operations.py", line 21
    print "View title: {0}".format(curView.properties["Title"])
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/web_operations.py'...
***   File "./lib/python3.5/site-packages/examples/web_operations.py", line 11
    print "Web site url: {0}".format(cur_web.properties['ServerRelativeUrl'])
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/web_read_direct.py'...
***   File "./lib/python3.5/site-packages/examples/web_read_direct.py", line 18
    print "Web title: " + web_title
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/office365'...
Listing './lib/python3.5/site-packages/office365/onedrive'...
Listing './lib/python3.5/site-packages/office365/outlookservices'...
Listing './lib/python3.5/site-packages/office365/runtime'...
Listing './lib/python3.5/site-packages/office365/runtime/auth'...
Listing './lib/python3.5/site-packages/office365/runtime/odata'...
Listing './lib/python3.5/site-packages/office365/runtime/utilities'...
Listing './lib/python3.5/site-packages/office365/sharepoint'...
Listing './lib/python3.5/site-packages/office365/sharepoint/publishing'...
Listing './lib/python3.5/site-packages/office365/sharepoint/search'...
Listing './lib/python3.5/site-packages/office365/sharepoint/taxonomy'...
Listing './lib/python3.5/site-packages/office365/sharepoint/userprofiles'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/test_listItem.py'...
***   File "./lib/python3.5/site-packages/tests/test_listItem.py", line 17
    print "List item '{0}' has been created.".format(item.properties["Title"])
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
